--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Bhavya Reddy Sanku</h1>
         <h6>Cricket is my favorite team sport</h6>
-        <p>Cricket is a dynamic, captivating, difficult, and most importantly FUN team sport that can be played by both kids and adults. The geographical location of a cricket match is irrelevant. It could be played in any location, including backyards, parks, streets, and beaches. One of the most thrilling features of the game of cricket is how often records are broken. Whether it's a T20 or a one-day game, this is one of the best matches for spectators. The anticipation continues until the final ball. Cricket is the game for you if you like suspense! You can never be sure of what will happen next.</p>
-        
+        <p>Cricket is a<b>dynamic, captivating, difficult, and most importantly</b>FUN team sport that can be played by both kids and adults. The geographical location of a cricket match is irrelevant. It could be played in any location, including backyards, parks, streets, and beaches. One of the most thrilling features of the game of cricket is how often records are broken. Whether it's a T20 or a one-day game, this is one of the best matches for spectators. The anticipation continues until the final ball. <b>Cricket is the game for you if you like suspense! </b>You can never be sure of what will happen next.</p>
+
     </body>
 </html>
