--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
             <li>England</li>
             <li>Newzeland</li>
         </ul>
+        <p><a href="aboutme.html">click here for aboutme</a></p>
     </body>
 </html>
