--- a/index.html
+++ b/index.html
@@ -23,5 +23,34 @@
             <li>Newzeland</li>
         </ul>
         <p><a href="aboutme.html">click here for aboutme</a></p>
+        <hr>
+        <h3>Four countries that I would recommend someone visit.</h3>
+        <table>
+            <tr>
+                <th>Country</th>
+                <th>Reason</th>
+                <th>number of days</th>
+            </tr>
+            <tr>
+                <th>United States</th>
+                <th>Disney has vast number of resorts which is dream place to visit</th>
+                <th>30</th>
+            </tr>
+            <tr>
+                <th>Canada</th>
+                <th>A visit to any city with sports bar during hockey season</th>
+                <th>30</th>
+            </tr>
+            <tr>
+                <th>Australia</th>
+                <th>Sydney Opera house</th>
+                <th>25</th>
+            </tr>
+            <tr>
+                <th>Finland</th>
+                <th>The happiest Country in the world</th>
+                <th>50</th>
+            </tr>
+        </table>
     </body>
 </html>
